// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given a release widget When it is loading rest data, then a loader will be displayed 1`] = `
<section
  project_id="102"
>
  <div
    class="release-loader"
  />
</section>
`;

exports[`Given a release widget When the browser is IE11, Then an error message is displayed instead of the content  1`] = `
<section>
  <div
    class="tlp-alert-danger"
    data-current-language="en_US"
    data-msgid="
        The plugin \\"Release Widget\\" is not supported under IE11. Please use a more recent browser.
    "
  >
    
        The plugin "Release Widget" is not supported under IE11. Please use a more recent browser.
    
  </div>
</section>
`;

exports[`Given a release widget When there are no errors, then the widget content will be displayed 1`] = `
<section
  project_id="102"
>
  <div>
    <div
      class="project-release-widget-content"
    >
      <roadmap-section-stub />
       
      <whats-hot-section-stub />
    </div>
  </div>
</section>
`;

exports[`Given a release widget When there is a rest error and it is empty, Then another message is displayed 1`] = `
<section
  project_id="102"
>
  <div
    class="tlp-alert-danger"
  >
    
        Oops, an error occurred!
    
  </div>
</section>
`;

exports[`Given a release widget When there is an error, then the widget content will not be displayed 1`] = `
<section
  project_id="102"
>
  <div
    class="tlp-alert-danger"
  >
    
        404 Error
    
  </div>
</section>
`;
